// Vitest Snapshot v1

exports[`lib/notion/clear-completed > GET /notion/action/:key?action=clearCompleted > adds checklist block under empty stores 1`] = `
"- [ ] 
"
`;

exports[`lib/notion/clear-completed > GET /notion/action/:key?action=clearCompleted > adds checklist block under empty stores 2`] = `
"- [ ] 
"
`;

exports[`lib/notion/clear-completed > GET /notion/action/:key?action=clearCompleted > handles nested items 1`] = `
"Store 1
- [ ] Remove 1.1
Store 2
- [ ] Remove 2.1
- [ ] Remove 2.2
Store 4
- [ ] Remove 4.1
	- Nested bullet
Store 5
- [ ] Remove 5.1
	- [ ] Nested checkbox
"
`;

exports[`lib/notion/clear-completed > GET /notion/action/:key?action=clearCompleted > prepends cleared items to Recently Cleared 1`] = `
"Store 1
- [ ] Remove 1.1
Store 2
- [ ] Remove 2.1
- [ ] Remove 2.2
Store 4
- [ ] Remove 4.1
Store 5
- [ ] Remove 5.1
"
`;
